--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
+        <img src="img/Logo.png" alt="Logo" id="logo">
+        <h1>Toboolist</h1>
 
     </header>
 
