--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 </head>
 
 <body>
+    <!--Intestazione-->
     <header>
         <img src="img/Logo.png" alt="Logo" id="logo">
         <h1>Toboolist</h1>
 
     </header>
+    <!--Aggiungi obbiettivo-->
 
     <body>
-
+        <div class="add-task">
+            <button class="button button-add-task">Add Task</button>
+            <button class="button button-add-section">Add Section</button>
+        </div>
     </body>
 
 </body>
