--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
     <link rel="stylesheet" href="style.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 
 <body>
@@ -17,12 +18,49 @@
     </header>
     <!--Aggiungi obbiettivo-->
 
-    <body>
-        <div class="add-task">
-            <button class="button button-add-task">Add Task</button>
-            <button class="button button-add-section">Add Section</button>
-        </div>
-    </body>
+
+    <div class="add-task">
+        <button class="button button-add-task">Add Task</button>
+        <button class="button button-add-section">Add Section</button>
+    </div>
+    <div class="container">
+        <h2>&#129083;New Task</h2>
+        <ul>
+            <li><span class="circle checked">Quarterly Newsletter</span>
+            </li>
+        </ul>
+        <h2>&#129083;Today</h2>
+        <ul>
+            <li>
+                <span class="circle checked">Recruiting blog post</span>
+            </li>
+            <li>
+                <span class="circle checked">Mobile app launch</span>
+            </li>
+            <li>
+                <span class="circle delete">Interview John H.</span>
+            </li>
+            <li>
+                <span class="circle checked">Summit update to mobile storefronts</span>
+            </li>
+        </ul>
+        <h2>&#129083;Upcoming</h2>
+        <ul>
+            <li>
+                <span class="circle delete">Schedule Meeting with Alex</span>
+            </li>
+            <li>
+                <span class="circle checked">Homepage refresh</span>
+            </li>
+            <li>
+                <span class="circle delete">Onboard new sales team members</span>
+            </li>
+            <li>
+                <span class="circle checked">Summit update to mobile storefronts</span>
+            </li>
+        </ul>
+    </div>
+
 
 </body>
 
