--- a/index.html
+++ b/index.html
@@ -17,46 +17,56 @@
 
     </header>
     <!--Aggiungi obbiettivo-->
-
-
     <div class="add-task">
         <button class="button button-add-task">Add Task</button>
         <button class="button button-add-section">Add Section</button>
     </div>
     <div class="container">
+        <!--Nuovi obbiettivi-->
         <h2>&#129083;New Task</h2>
         <ul>
             <li><span class="circle checked">Quarterly Newsletter</span>
+                <span class="circle-list heavenly-color">Editorial</span>
             </li>
         </ul>
+        <!--Obbiettivi di oggi-->
         <h2>&#129083;Today</h2>
         <ul>
             <li>
                 <span class="circle checked">Recruiting blog post</span>
+                <span class="circle-list heavenly-color">Editorial</span>
             </li>
             <li>
                 <span class="circle checked">Mobile app launch</span>
+                <span class="circle-list pink-color">Q1-goals</span>
             </li>
             <li>
                 <span class="circle delete">Interview John H.</span>
+                <span class="circle-list green-color">Recruiting</span>
             </li>
             <li>
                 <span class="circle checked">Summit update to mobile storefronts</span>
+                <span class="circle-list color-orange">Mobile</span>
             </li>
         </ul>
+        <!--Obbiettivi imminenti-->
         <h2>&#129083;Upcoming</h2>
         <ul>
             <li>
                 <span class="circle delete">Schedule Meeting with Alex</span>
+                <span class="circle-list green-color">Recruiting</span>
             </li>
             <li>
                 <span class="circle checked">Homepage refresh</span>
+                <span class="circle-list purple-color">Website</span>
             </li>
             <li>
                 <span class="circle delete">Onboard new sales team members</span>
+                <span class="circle-list yellow-color">Sales</span>
             </li>
             <li>
                 <span class="circle checked">Summit update to mobile storefronts</span>
+                <span class="circle-list orange-color">Editorial</span>
             </li>
         </ul>
     </div>
