--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </li>
             <li>
                 <span class="circle checked">Summit update to mobile storefronts</span>
-                <span class="circle-list orange-color">Editorial</span>
+                <span class="circle-list heavenly-color">Editorial</span>
             </li>
         </ul>
     </div>
